--- a/about.html
+++ b/about.html
@@ -353,8 +353,8 @@
 
                                     <div class="content h-100 w-100 container-fluid bg-blue pt-3">
                                         <div class="card bg-blue container px-0 h-100 mb-0">
-                                            <div class="img-content bg-blue">
-                                                <img src="assets/images/MD.png" alt="img">
+                                            <div class="img-content bg-blue mt-4">
+                                                <img src="assets/images/MD1.png" alt="img">
                                                 <div class="bottom-box text-center py-1">
                                                     <h5 class="text-white my-0" >Eugene Silinda</h5>
                                                     <p class="mb-0">Chief Executive Officer</p>
