--- a/index.html
+++ b/index.html
@@ -165,11 +165,32 @@
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
-                <div class="col-12 offset-md-1 col-md-11">
+                <div class="col-12 col-md-11">
                     <div class="swiper-container hero-slider">
                         <div class="swiper-wrapper">
+
                             <!-- swiper / slide element start -->
-                            <div class="swiper-slide slide-content d-flex align-items-center">
+                            <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
+                                <div class="single-slide">
+                                    <!-- short text heading -->
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">COVID-19
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <p class="" data-aos="fade-right" data-aos-delay="600">
+                                        Helping customers navigate COVID-19, <br> 
+                                        Advice for managing disruption and keep business going in the new now.
+                                    </p>
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
+
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
                                     <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">One Platform. Every Process.
@@ -187,7 +208,7 @@
                             </div>
                             <!-- swiper / slide element end -->
                             <!-- swiper / slide element start -->
-                            <div class="swiper-slide slide-content d-flex align-items-center">
+                            <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
                                     <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Internet of things
@@ -204,27 +225,8 @@
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
-                            <!-- swiper / slide element start -->
-                            <div class="swiper-slide slide-content d-flex align-items-center">
-                                <div class="single-slide">
-                                    <!-- short text heading -->
-                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">COVID-19
-                                    </h1>
 
-                                    <!-- brief text -->
-                                    <p data-aos="fade-right" data-aos-delay="600">
-                                        Helping customers navigate COVID-19, advice for managing disruption and keep
-                                        business going in the new now.
-                                    </p>
-
-                                    <!-- call to action buttons -->
-                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
-                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
-                                </div>
-                            </div>
-                            <!-- swiper / slide element end -->
-
-                            <!-- <div class="swiper-slide slide-content d-flex align-items-center">
+                            <!-- <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Creative<br> Multipurpose websites
                                     </h1>
@@ -865,13 +867,13 @@
 
         <!-- Foot Note Start -->
         <div class="foot-note py-3">
-            <div class="container">
+            <div class="container text-dark">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2020 All Rights Reserved.</p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0">
+                    <p class="mb-0 text-dark" data-aos="fade-right" data-aos-offset="0">&copy; 2020 All Rights Reserved.</p>
+                    <p class="mb-0 text-dark" data-aos="fade-left" data-aos-offset="0">
                         <!-- <a href="#">Terms Of Use</a> -->
-                        <a href="#">Privacy & Security Statement</a>
+                        <a class="text-dark" href="#">Privacy & Security Statement</a>
                     </p>
                 </div>
             </div>
