--- a/products/cloud-saas.html
+++ b/products/cloud-saas.html
@@ -189,18 +189,6 @@
 
     <!-- page content -->
     <div class=" consulting-page container-fluid">
-        <div class="header row bg-dark d-none">
-            <div class="img px-0 col-lg-5">
-                <img src="../assets/images/heros/new/consulting.png" alt="">
-            </div>
-
-            <div class="col-lg-7 text d-flex align-items-end mb-3">
-                <h1 class="title text-primary">
-                    IT Advisory / Consulting
-                </h1>
-            </div>
-
-        </div>
 
         <div class="container row py-4 mx-auto">
             <!-- left -->
@@ -213,14 +201,21 @@
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        We hosts applications for customers and make the application available to them via the internet. <br> 
-                        Our business applications, including email and collaboration, customer relationship management (CRM), billing/payroll processing, enterprise resourcing planning (ERP), content management, and document editing and management. <br> 
+                        <!-- We hosts applications for customers and make the application available to them via the internet. <br> 
+                        Our business applications, including email and collaboration, customer relationship management (CRM), billing/payroll processing, enterprise resourcing planning (ERP), content management, and document editing and management. <br>  -->
+                        We hosts applications for customers and make the application available to them
+                        via the internet. Our business applications, including email and collaboration,
+                        customer relationship management (CRM), billing/payroll processing, enterprise
+                        resourcing planning (ERP), content management, and document editing and
+                        management. The SaaS model can reduce costs for IT infrastructure. It can also
+                        minimize some of the time spent on management tasks, because a SaaS
+                        provider is responsible for upgrades and management.
                     </p>
-                    <p>
+                    <!-- <p>
                         The SaaS model can reduce costs for IT infrastructure. It can also minimize some of the time spent on management tasks, because a SaaS provider is responsible for upgrades and management.  
-                    </p>
+                    </p> -->
 
-                    <h3 class="text-dark">How can we help you</h3>
+                    <h5 class="text-dark">How can we help you</h5>
                     <ul>
                         <li>Stay up to date with the latest releases and unlimited upgrades </li>
                         <li>Reduce capital expenditures and eliminate up-front costs </li>
@@ -245,15 +240,11 @@
     </a>
     <!-- scroll to top end -->
 
-    <!-- strip -->
-    <!-- <div class="strip"></div> -->
-    <!-- strip -->
-
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
