--- a/products/digital-customdev.html
+++ b/products/digital-customdev.html
@@ -202,13 +202,15 @@
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        Quality Designs application development and maintenance service is always in
-                        tune with the evolving business requirements and acquires an IT framework that
-                        can keep up the pace of our clients. Our deep-rooted domain knowledge and
-                        experience enables us to operate in complex application environments and
-                        handle client crucial applications efficiently. Quality Designs has extensive
-                        experience in and leverages this expertise to provide customers with
-                        comprehensive Development services                 
+                        Quality Designs application development and maintenance service is
+                        always in tune with the evolving business requirements and acquires an IT
+                        framework that can keep up the pace of our clients. Our deep-rooted
+                        domain knowledge and experience enables us to operate in complex
+                        application environments and handle client crucial applications efficiently.
+                        Our team implements the agile development process to deploy the
+                        solution, adhering to the best industry standards and practices. Our team
+                        possesses the capability to design and develop technology products that
+                        can streamline business processes and grow revenue.                 
                     </p>
 
                     <h3 class="text-dark">How can we help you</h3>
@@ -242,10 +244,10 @@
     <!-- strip -->
 
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
