--- a/products/digital-ecm.html
+++ b/products/digital-ecm.html
@@ -204,22 +204,73 @@
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        Quality Designs ECM ensure that users can easily access up to date documents.
+                        <!-- Quality Designs ECM ensure that users can easily access up to date documents.
                         Businesses can use ECM systems to reduce organizational risk and ensure that
-                        users get the documents and information they need.                  
+                        users get the documents and information they need.                   -->
+                        ECM solutions capture, store, activate, analyze and automate business content,
+                        providing new value from data that was previously unstructured and
+                        unavailable. We help your streamline access, eliminate holdups, enhance
+                        security and integrity and minimize overhead. Businesses can use ECM systems
+                        to reduce organizational risk and ensure that users get the documents and
+                        information they need.
+                    </p>
+                    <p>
+                        ECM is an ongoing and evolving strategy for maximizing how your content is to
+                        be used. Digital transformation through collaboration, Quality Designs helps
+                        businesses accelerate digital transformation with a full view of enterprise
+                        information. We can manage unstructured content as part of your business
+                        processes more effectively while facilitating collaboration and storing content to
+                        avoid redundancies.
                     </p>
 
                     <h5 class="text-dark">Key Features &amp; Capabilities</h5>
                     <ul>
-                        <li>Capture, Imaging</li>
-                        <li>File Sync, Storage, Archiving</li>
                         <li>Document Management</li>
+                        <p>
+                            Managing your content, finding them quickly, linking them to business
+                            processes, sharing them across in/out of the organization. Powerful search
+                            functionality allows users to easily find what they need. Providing secure
+                            management and instant access to a wide range of content, to ease business
+                            tasks and to help assure governance and compliance
+                        </p>
+
+                        <li>Workflow Management</li>
+                        <p>
+                            We offer paper-based processes by electronically routing documents from one
+                            person to the next. We automate workflows to present the relevant information.
+                            Using ECM to automate vital but repetitive human tasks, to minimize error-
+                            prone manual work
+                        </p>
+
+                        <li>Capture</li>
+                        <p>
+                            The integrated scanning capability manages high-volume and low-volume
+                            scanning requirements, automates metadata tagging, and supports key
+                            business systems and all major scanning hardware. Documents can be captured
+                            and digitized using a variety of methods, including scanning paper documents
+                            and creating electronic forms, or importing content that was already digital, such
+                            as Microsoft Office documents, photos or PDFs.
+                        </p>
+
                         <li>Records Management</li>
-                        <li>Search &amp; Retrieval</li>
-                        <li>Collaboration</li>
-                        <li>Content Publishing &amp; Creation</li>
-                        <li>Security, Risk Management &amp; Information Governance</li>
-                        <li>Integrations</li>
+                        <p>
+                            We create classification plans, retention periods and disposition policies. You
+                            can leverage this capability for enterprise records across multiple systems.
+                        </p>
+
+                        <li>Content Access</li>
+                        <p>
+                            Access business documents from any location, ensuring consistent information
+                            flow and increasing the efficiency of global business processes.
+                        </p>
+
+                        <li>Archiving</li>
+                        <p>
+                            Automatically store data and documents on a secure archive server. You can off-
+                            load data from production systems, for improved system performance and
+                            faster upgrades.
+                        </p>
+
                     </ul>
 
             </div>
@@ -235,15 +286,11 @@
     </a>
     <!-- scroll to top end -->
 
-    <!-- strip -->
-    <!-- <div class="strip"></div> -->
-    <!-- strip -->
-
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
