--- a/products/digital-erp.html
+++ b/products/digital-erp.html
@@ -203,6 +203,14 @@
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
+                        <!-- We deploy a single, comprehensive solution - Automatically pull systems and
+                        processes together to manage business activities. Our adaptable business
+                        management solution software that handles all the resources required in the
+                        business. It does this by integrating all the information flowing through the
+                        various departments. ERP Business Applications put flexibility and scalability at
+                        the core of your business, enabling you to start quickly, grow at your own pace,
+                        and adapt in real time. Easily tailor and extend the application to meet your
+                        unique business or industry-specific needs.                   -->
                         We deploy a single, comprehensive solution - Automatically pull systems and
                         processes together to manage business activities. Our adaptable business
                         management solution software that handles all the resources required in the
@@ -210,21 +218,63 @@
                         various departments. ERP Business Applications put flexibility and scalability at
                         the core of your business, enabling you to start quickly, grow at your own pace,
                         and adapt in real time. Easily tailor and extend the application to meet your
-                        unique business or industry-specific needs.                  
+                        unique business or industry-specific needs.
                     </p>
 
-                    <h3 class="text-dark">Key Features and capabilities</h3>
+                    <h5 class="text-dark">Key Features and capabilities</h5>
                     <ul>
-                        <li>Accounting</li>
-                        <li>Inventory Management</li>
-                        <li>Human Resource Management</li>
-                        <li>Reporting and Analytics</li>
-                        <li>Project Financial Management</li>
-                        <li>Risk Management</li>
-                        <li>Logistics</li>
-                        <li>Manufacturing</li>
-                        <li>Supply Chain Management</li>
-                        <li>Product Lifecycle Management</li>
+                        <li> Lower operational costs through streamlined business processes and best practices </li>
+                        <li> Enhanced collaboration from users sharing data in contracts, requisitions, and purchase orders </li>
+                        <li> Improved efficiency through a common user experience across many business functions and well-defined business processes </li>
+                        <li> Higher user-adoption rates from a common user experience and design </li>
+                        <li> Reduced risk through improved data integrity and financial controls </li>
+                        <li> Lower management and operational costs through uniform and integrated systems </li>
+                    </ul>
+
+                    <h5 class="text-dark">Cloud vs On-premise</h5>
+                    <p>
+                        Our ERP systems can be deployed in any number of ways: in a public or private
+                        cloud, on premise, or in various hybrid scenarios that combine environments.
+                        Quality Designs gives you the flexibility to choose the deployment that best suits
+                        your needs, whether on-premise, in the cloud or both (hybrid). The benefits of
+                        each as follows.
+                    </p>
+
+                    <ul>
+                        <li>
+                            <strong> Cloud ERP </strong> - The maintenance of the system is handled by the provider.
+                            There is lower upfront costs.
+                        </li>
+                        <li>
+                            <strong> On-premise </strong> ERP - The ERP software is installed in your data center at the
+                            locations of your choice. The installation and maintenance of the
+                            hardware and software is client staff’s responsibility.
+                        </li>
+                        <li>
+                            <strong> Hybrid ERP </strong>- Some clients want a combination of both to meet their
+                            business requirements. Some ERP applications and data will be in the
+                            cloud and some on premise.
+                        </li>
+                    </ul>
+
+                    <p>
+                        Quality Designs powerful features, integrated with the latest innovative
+                        technologies to enhance digitization, streamlining supply chain, and simplifying
+                        and personalizing the customer experience.
+                    </p>
+
+                    <h5 class="text-dark">Our key features:</h5>
+                    <ul>
+                        <li>Accounting </li>
+                        <li>Inventory Management </li>
+                        <li>Human Resource Management </li>
+                        <li>Reporting and Analytics </li>
+                        <li>Project Financial Management </li>
+                        <li>Risk Management </li>
+                        <li>Logistics </li>
+                        <li>Manufacturing </li>
+                        <li>Supply Chain Management </li>
+                        <li>Product Lifecycle Management </li>
                     </ul>
 
             </div>
@@ -240,15 +290,11 @@
     </a>
     <!-- scroll to top end -->
 
-    <!-- strip -->
-    <!-- <div class="strip"></div> -->
-    <!-- strip -->
-
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
