--- a/products/digital-mobile.html
+++ b/products/digital-mobile.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
-    <title>Quality Designs | Solutions and Services</title>
+    <title>Quality Designs | Mobile App Development</title>
     <!-- Stylesheets & Fonts -->
     <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet"> -->
@@ -145,7 +145,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero product-hero hero-sm">
+    <section class="hero iot-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
@@ -157,7 +157,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        Solutions & Services
+                                        Mobile App Development
                                     </h1>
 
                                     <!-- brief text -->
@@ -187,71 +187,58 @@
     </section>
     <!-- Hero End -->
 
-    <!-- devices Trust Start -->
-    <section id="devices" class="trust mt-4 pb-0 pt-0 mt-0 bg-white">
-        <div class="service-spacer"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
-                    <div class="title pt-0 mb-0">
-                        <!-- <h6 class="title-primary">Digital Solutions</h6> -->
-                        <h2 class="title title-blue pt-0 mb-0">Devices</h2>
-                    </div>
-                    <!-- <p>
+    <!-- page content -->
+    <div class=" consulting-page container-fluid">
 
-                    </p> -->
+        <div class="container row py-4 mx-auto">
+            <!-- left -->
+            <div class="left col-lg-5 text-right text-primary">
+                <h3 >
+                    Our mobile app solutions are created to suit the specific objectives of our clients,
+                    including seamless integration
+                </h3>
+            </div>
 
-                    <!-- <h5>Stratedgy and Operations</h5> -->
+            <!-- right -->
+            <div class="col-lg-7 text-left">
+                    <p>
+                        Our Mobile app development software includes a wide variety of tools for
+                        building, converting, and deploying cross-platform applications for mobile
+                        devices. We design, prototype, develop, and launch mobile applications. Our
+                        understanding of mobile and web-based technology empowers us to bring a
+                        level of expertise to the digital world like no one else. Our Senior developers are
+                        capable to deal with any business challenges while utilizing the latest trends to
+                        support app creation no matter what stage of development.                 
+                    </p>
 
-                    <div id="accordion" role="tablist" class="p-2 mb-2 bg-white rounded">
-                        <!-- Push To Talk -->
-                        <div id="push-to-talk" class="card my-2 rounded ">
-                            <div class="card-header" role="tab" id="headingFourteen">
-                            <h5 class="mb-0">
-                                <h5 data-toggle="collapse" href="#collapseFourteen" aria-expanded="true" aria-controls="collapseFourteen" class="collapsed text-primary">
-                                Push To Talk
-                                </h5>
-                            </h5>
-                            </div>
-                        
-                            <div id="collapseFourteen" class="collapse show" role="tabpanel" aria-labelledby="headingFourteen" style="">
-                            <div class="card-body text-white">
-                                <!-- <h6>Push To Talk Content</h6> -->
-                                <p class="text-secondary">
-                                    Is an IP-Based end-to-end communications and applications platform enabling Next Generation Push-To-Talk Services.
-                                </p>
+                    <h5 class="text-dark">Mobile App Development Services</h5>
+                    <ul>
+                        <li>Mobile development services for integrated software systems </li>
+                        <li>Augmented reality for business-driven mobile development </li>
+                        <li>Integration with existing software and hardware </li>
+                        <li>Creation of complex solutions from scratch </li>
+                        <li>Architectural solutions for mobile applications </li>
+                        <li>APIs and 3rd-party integrations </li>
+                    </ul>
 
-                                <h6 class="text-secondary">It has its special tools which are:</h6>
-                                <ul class="text-secondary">
-                                    <li> <strong> Instant Talk </strong> – One-Touch, Instant Group and Private Calls. Recipient hear
-                                    speech from loudspeaker without need to answer.</li>
-                                    <li> <strong> Instant Messaging </strong> – Send Text, Picture or QR Bar-Code data to group and
-                                    individual receipt instantly.</li>
-                                    <li> <strong> Instant Locating </strong> – Locate Co - Workers, Vehicles, Friends and Family Members
-                                    accurately in real-time location.</li>
-                                </ul>
+                    <h5 class="text-dark">Supported Operating Systems</h5>
+                    <ul>
+                        <li><strong>iOS App Development</strong>
+                             - Our app developers use Objective C
+                            programming language and Apple Native SDK experience to develop
+                            applications for different iOS devices, including iPhones and iPads
+                        </li>
+                        <li><strong>Android App Development</strong>
+                             - Our Android app developers use Native Android
+                            to program Android apps for Android Phones and Tablets. We build Android
+                            apps that support all the latest Android versions released before the launch of
+                            an app to the Play Store.
+                        </li>
+                    </ul>
 
-                                <h6 class="text-secondary">It has a vast user Segments namely :</h6>
-                                <ul class="text-secondary">
-                                    <li>Transportation</li>
-                                    <li>Healthcare</li> 
-                                    <li>Construction Industry</li> 
-                                    <li>Public Security & Authorities</li> 
-                                    <li>Hotel & Hospitality Industry</li> 
-                                    <li>Retail & Manufacturing Industry</li>
-                                    <li>Utilities</li>
-                                </ul>
-                            </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    
-                </div>
             </div>
         </div>
-    </section>
-    <!-- devices  Trust End -->
+    </div>
 
 
     <!-- scroll to top start -->
@@ -261,8 +248,16 @@
     <!-- scroll to top end -->
 
     <!-- strip -->
-    <div class="strip"></div>
+    <!-- <div class="strip"></div> -->
     <!-- strip -->
+
+    <!-- grey strip -->
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
+        <P>We'll need just a few details from you and one of our specialists will be in touch</P>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
+    </div>
+    <!-- grey strip -->
     <!-- Footer Start -->
     <footer>
         <!-- Widgets Start -->
