--- a/products/digital-payroll.html
+++ b/products/digital-payroll.html
@@ -203,24 +203,39 @@
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        Our payroll solution will prevent human errors when calculating and
+                        <!-- Our payroll solution will prevent human errors when calculating and
                         administering payroll, as well as allow employees to self-service some functions
-                        to reduce administrative overhead.                  
+                        to reduce administrative overhead.                   -->
+                        Our Payroll centralizes unified payroll processes onto one platform and provides
+                        a variety of tools to make payroll functions more efficient and accurate. We
+                        integrate seamlessly with other business and HR functions. All legislative
+                        complications that payroll encompasses have been pre-configured. We provide
+                        everything your business needs to manage people and payroll. Our payroll
+                        solution will prevent human errors when calculating and administering payroll,
+                        as well as allow employees to self-service some functions to reduce
+                        administrative overhead.
                     </p>
 
-                    <h3 class="text-dark">Payroll Features &amp; Capabilities</h3>
+                    <h5 class="text-dark">How can we help you</h5>
                     <ul>
-                        <li>Calculating employee pay</li>
-                        <li>Automatically calculating deductions</li>
-                        <li>Direct deposit check processing</li>
-                        <li>Generating tax forms</li>
-                        <li>Maintaining payroll history for each employee</li>
-                        <li>Administering benefit plans</li>
-                        <li>Managing retirement plans</li>
-                        <li>Payroll tracking and auditing</li>
-                        <li>Employee self-service</li>
+                        <li>Complies with all statutory requirements</li>
+                        <li>Creates employee payslips and IRP5</li>
+                        <li>Automatically calculates tax and statutory deductions</li>
+                        <li>Unlimited earnings, taxes, benefits, deductions, and net pay information</li>
                     </ul>
 
+                    <h5 class="text-dark">Payroll Features &amp; Capabilities</h5>
+                    <ul>
+                        <li>Calculating employee pay </li>
+                        <li>Automatically calculating deductions </li>
+                        <li>Direct deposit check processing </li>
+                        <li>Generating tax forms </li>
+                        <li>Maintaining payroll history for each employee </li>
+                        <li>Administering benefit plans </li>
+                        <li>Managing retirement plans </li>
+                        <li>Payroll tracking and auditing </li>
+                        <li>Employee self-service </li>
+                    </ul>
             </div>
         </div>
     </div>
@@ -234,15 +249,11 @@
     </a>
     <!-- scroll to top end -->
 
-    <!-- strip -->
-    <!-- <div class="strip"></div> -->
-    <!-- strip -->
-
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
