--- a/products/cloud-iaas.html
+++ b/products/cloud-iaas.html
@@ -239,16 +239,12 @@
         <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
-
-    <!-- strip -->
-    <!-- <div class="strip"></div> -->
-    <!-- strip -->
-
+    
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
